[tool.poetry]
name = "boi"
version = "0.2.1"
description = ""
authors = ["fzhulitov <fzhulitov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
pandas = "^1.5.0"
requests = "^2.28.1"
lxml = "^4.9.1"
html5lib = "^1.1"
bs4 = "^0.0.1"
pyoai = "^2.5.0"
sdmx1 = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
