[tool.poetry]
name = "boi"
version = "0.2.1"
description = ""
authors = ["fzhulitov <fzhulitov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
pandas = "^2.2.0"
requests = "*"
lxml = "*"
#html5lib = "^1.1"
#bs4 = "^0.0.1"
#pyoai = "^2.5.0"
#sdmx1 = "^2.7.0"
setuptools = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
