[tool.poetry]
name = "boi"
version = "0.2.2"
description = ""
authors = ["fzhulitov <fzhulitov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
pandas = "^2.2.0"
requests = "*"
lxml = "*"
setuptools = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
